Update logo button to use image instead of SVG
Replaced logo button with an image logo for better visual representation.

--- a/index.html
+++ b/index.html
@@ -357,13 +357,16 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8 py-4 md:py-6">
             <div class="flex items-center justify-between">
                 <!-- Logo -->
-                <button onclick="scrollToSection('home')"
-                    class="flex items-center cursor-pointer flex-shrink-0 w-[160px] sm:w-[180px] md:w-[200px] transition-transform hover:scale-105">
-                    <svg viewBox="0 0 200 26.67" class="w-full h-auto">
-                        <text x="0" y="20" font-family="Arial, sans-serif" font-size="24" font-weight="bold"
-                            fill="#D7001F">TechnoLOI</text>
-                    </svg>
-                </button>
+                <!-- Logo -->
+    <button onclick="scrollToSection('home')"
+    class="flex items-center cursor-pointer flex-shrink-0 transition-transform hover:scale-105 -my-1 -ml-2">
+
+    <img 
+        src="logo.png" 
+        alt="TechnoLOI Logo"
+        class="h-12 sm:h-14 md:h-15 w-auto object-contain"
+    >
+</button>
 
                 <!-- Center Navigation Links (Desktop) -->
                 <div class="hidden lg:flex items-center gap-3 absolute left-1/2 -translate-x-1/2">
