Update page title for TechnoLOGI branding

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechnoLOI - Turning Business Websites Into Customer Enquiries</title>
+    <title>TechnoLOGI - Website Design & Development</title>
     <meta name="description"
         content="High-converting websites with WhatsApp and call integration, plus marketing and eye-catching 3D videos.">
 
