Remove URLs from social media links in index.html
Updated social media links to remove URLs.

--- a/index.html
+++ b/index.html
@@ -930,32 +930,32 @@
                                 <p class="text-lg sm:text-xl font-black mb-4">Follow Us</p>
                                 <div class="flex gap-4 justify-start flex-wrap">
                                     <!-- Facebook -->
-                                    <a href="https://facebook.com/technologi" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="w-12 h-12 bg-white/20 hover:bg-white/30 rounded-full flex items-center justify-center transition-all duration-300 hover:scale-110 hover:rotate-12">
                                         <i data-lucide="facebook" class="w-6 h-6 text-white"></i>
                                     </a>
 
                                     <!-- Instagram -->
-                                    <a href="https://instagram.com/technologi" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="w-12 h-12 bg-white/20 hover:bg-white/30 rounded-full flex items-center justify-center transition-all duration-300 hover:scale-110 hover:rotate-12">
                                         <i data-lucide="instagram" class="w-6 h-6 text-white"></i>
                                     </a>
 
                                     <!-- LinkedIn -->
-                                    <a href="https://linkedin.com/company/technologi" target="_blank"
+                                    <a href="" target="_blank"
                                         rel="noopener noreferrer"
                                         class="w-12 h-12 bg-white/20 hover:bg-white/30 rounded-full flex items-center justify-center transition-all duration-300 hover:scale-110 hover:rotate-12">
                                         <i data-lucide="linkedin" class="w-6 h-6 text-white"></i>
                                     </a>
 
                                     <!-- YouTube -->
-                                    <a href="https://youtube.com/@technologi" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="w-12 h-12 bg-white/20 hover:bg-white/30 rounded-full flex items-center justify-center transition-all duration-300 hover:scale-110 hover:rotate-12">
                                         <i data-lucide="youtube" class="w-6 h-6 text-white"></i>
                                     </a>
 
                                     <!-- Twitter/X -->
-                                    <a href="https://twitter.com/technologi" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="w-12 h-12 bg-white/20 hover:bg-white/30 rounded-full flex items-center justify-center transition-all duration-300 hover:scale-110 hover:rotate-12">
                                         <i data-lucide="twitter" class="w-6 h-6 text-white"></i>
                                     </a>
