Replace logo text with image in footer

--- a/index.html
+++ b/index.html
@@ -972,10 +972,11 @@
     <footer class="bg-gray-900 text-white py-12">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
             <div class="flex flex-col items-center justify-center space-y-6">
-                <!-- Logo -->
-                <div class="text-3xl sm:text-4xl font-black italic">
-                    <span class="text-[#D7001F]">Techno</span><span class="text-[#009343]">LOGI</span>
-                </div>
+            <!-- Logo -->
+            <div class="flex items-center">
+                <img src="logo.png" alt="TechnoLOGI Logo" class="h-10 sm:h-12 w-auto object-contain">
+            </div>
+
 
                 <!-- Copyright -->
                 <p class="text-gray-400 text-sm sm:text-base">
